// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Autoedit > autoedit - completions > autocomplete/execute multiline (non-empty result) 1`] = `
[
  "    const n = arr.length;
    let swapped;
    do {
        swapped = false;
        for (let i = 0; i < n - 1; i++) {
            if (arr[i] > arr[i + 1]) {
                const temp = arr[i];
                arr[i] = arr[i + 1];
                arr[i + 1] = temp;
                swapped = true;
            }
        }
    } while (swapped);
    return arr;",
]
`;

exports[`Autoedit > autoedit - edits > client can only render inline diffs > produces an inline diff for a complex suggestion 2`] = `
[
  {
    "range": {
      "end": {
        "character": 31,
        "line": 5,
      },
      "start": {
        "character": 26,
        "line": 5,
      },
    },
    "type": "delete",
  },
  {
    "range": {
      "end": {
        "character": 31,
        "line": 5,
      },
      "start": {
        "character": 31,
        "line": 5,
      },
    },
    "text": "Person",
    "type": "insert",
  },
  {
    "range": {
      "end": {
        "character": 34,
        "line": 5,
      },
      "start": {
        "character": 33,
        "line": 5,
      },
    },
    "type": "delete",
  },
  {
    "range": {
      "end": {
        "character": 34,
        "line": 5,
      },
      "start": {
        "character": 34,
        "line": 5,
      },
    },
    "text": "b",
    "type": "insert",
  },
  {
    "range": {
      "end": {
        "character": 41,
        "line": 5,
      },
      "start": {
        "character": 36,
        "line": 5,
      },
    },
    "type": "delete",
  },
  {
    "range": {
      "end": {
        "character": 41,
        "line": 5,
      },
      "start": {
        "character": 41,
        "line": 5,
      },
    },
    "text": "Person",
    "type": "insert",
  },
  {
    "range": {
      "end": {
        "character": 0,
        "line": 6,
      },
      "start": {
        "character": 0,
        "line": 6,
      },
    },
    "text": "    return a.age + b.age",
    "type": "insert",
  },
]
`;

exports[`Autoedit > autoedit - edits > client can only render inline diffs > produces an inline diff for a simple suggestion 2`] = `
[
  {
    "range": {
      "end": {
        "character": 36,
        "line": 5,
      },
      "start": {
        "character": 31,
        "line": 5,
      },
    },
    "type": "delete",
  },
  {
    "range": {
      "end": {
        "character": 36,
        "line": 5,
      },
      "start": {
        "character": 36,
        "line": 5,
      },
    },
    "text": "Person",
    "type": "insert",
  },
  {
    "range": {
      "end": {
        "character": 51,
        "line": 5,
      },
      "start": {
        "character": 46,
        "line": 5,
      },
    },
    "type": "delete",
  },
  {
    "range": {
      "end": {
        "character": 51,
        "line": 5,
      },
      "start": {
        "character": 51,
        "line": 5,
      },
    },
    "text": "Person",
    "type": "insert",
  },
]
`;

exports[`Autoedit > autoedit - edits > client can render both inline and aside diffs > produces a mix of aside and inline diffs for a complex suggestion 2`] = `
[
  {
    "range": {
      "end": {
        "character": 31,
        "line": 5,
      },
      "start": {
        "character": 26,
        "line": 5,
      },
    },
    "type": "delete",
  },
  {
    "range": {
      "end": {
        "character": 34,
        "line": 5,
      },
      "start": {
        "character": 33,
        "line": 5,
      },
    },
    "type": "delete",
  },
  {
    "range": {
      "end": {
        "character": 41,
        "line": 5,
      },
      "start": {
        "character": 36,
        "line": 5,
      },
    },
    "type": "delete",
  },
  {
    "range": {
      "end": {
        "character": 52,
        "line": 5,
      },
      "start": {
        "character": 52,
        "line": 5,
      },
    },
    "text": "",
    "type": "insert",
  },
]
`;

exports[`Autoedit > autoedit - edits > client can render both inline and aside diffs > produces an inline diff for a simple suggestion 2`] = `
[
  {
    "range": {
      "end": {
        "character": 36,
        "line": 5,
      },
      "start": {
        "character": 31,
        "line": 5,
      },
    },
    "type": "delete",
  },
  {
    "range": {
      "end": {
        "character": 36,
        "line": 5,
      },
      "start": {
        "character": 36,
        "line": 5,
      },
    },
    "text": "Person",
    "type": "insert",
  },
  {
    "range": {
      "end": {
        "character": 51,
        "line": 5,
      },
      "start": {
        "character": 46,
        "line": 5,
      },
    },
    "type": "delete",
  },
  {
    "range": {
      "end": {
        "character": 51,
        "line": 5,
      },
      "start": {
        "character": 51,
        "line": 5,
      },
    },
    "text": "Person",
    "type": "insert",
  },
]
`;
